--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="score">0</div>
     <canvas id="gameCanvas" width="300" height="300"></canvas>
-    <button id="re_try_btn" onclick="toRetry()">retry</button>
+    <button id="re_try_btn" onclick="toRetry()">재시작 벝은</button>
     <style>
       #gameCanvas {
         position: absolute;
